# pfp

./: CHANGELOG.md  Cargo.toml  README.md  justfile  release.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: release.yml
src/: client.rs  config.rs  error.rs  logger.rs  main.rs  models.rs  output.rs  params.rs  resolve.rs  validate.rs
src/commands/: cancel.rs  inspect.rs  logs.rs  ls.rs  mod.rs  pause.rs  resume.rs  run.rs  runs.rs  schedule_resume.rs
tests/: cli.rs
tests/fixtures/: ansible_deploy_schema.json  terraform_schema.json
