[package]
name = "pfp"
version = "0.1.0"
edition = "2021"
description = "Prefect CLI - a fast Rust CLI for managing Prefect deployments and flow runs"
license = "MIT"
repository = "https://github.com/devinbarry/pfp"
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
colored = "2"
dirs = "5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serial_test = "3"
mockito = "1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
